--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "axios": "^1.2.1",
+    "better-scroll": "^2.5.0",
     "core-js": "^3.6.5",
     "vant": "^2.12.53",
     "vue": "^2.6.11",
